# FactYou

./: .autoenv.zsh  .cursorignore  .gitattributes  .gitignore  .pre-commit-config.yaml  FactYou.yaml  MANIFEST.in  README.md  contextualize_sentences.py  extract_sentences.py  factyou.yml  factyou_model_training.yaml  find_referenced_match_in_db.py  pyproject.toml  requirements.txt  test_extract_text_and_refs.py
factyu/: __init__.py  config.py  main.py
factyu/contextualization/: context.py  fragment_detector.py
factyu/data/models/: config.json  threshold.json  tokenizer_config.json
factyu/database/: models.py
factyu/extraction/: parser.py  references.py
factyu/ui/: desktop.py
factyu/web/: app.py  server.py
factyu/web/templates/: contextualize.html  index.html  splash.html
scripts/: export_analysis.py  optimize_model.py  train_deberta_sentence_complete_classifier.py
templates/: index.html
