[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factyu"
version = "0.1.0"
description = "FactYou - A tool for fact checking and contextualization"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "spacy>=3.5.0",
    "flask>=2.0.0",
    "PyQt6>=6.4.0",
    "PyQt6-QScintilla>=2.14.1",
    "PyQt6-Qt6-platforms>=6.8.2",
]

[tool.setuptools]
package-data = { factyu = ["data/models/*"] }
